[tool.poetry]
name = "canbuscollectionmodule"
version = "0.1.0"
description = "A module for reading and passing canbus data to zmq"
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
zmq = "^0.0.0"
matplotlib = "^3.5.1"
numpy = "^1.21.4"
avro = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
